@@ -1,5 +1,6 @@
-apply plugin: 'java'
-apply plugin: 'maven'
+plugins {
+    id 'java'
+}
 
 
 repositories {
@@ -14,12 +15,31 @@ compileJava {
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
     if (System.getProperty("user.dir").contains(":\\")) {
-        options.compilerArgs << "-Xplugin:ZrString"
+        options.compilerArgs
+                << "-Xplugin:ZrString"
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-XDignore:symbol.file"
+//                << "--add-exports=jdk.compiler/com.sun.tools.javac.api=zircon.javac"
+//                << "--add-exports=jdk.compiler/com.sun.tools.javac.comp=zircon.javac"
+//                << "--add-exports=jdk.compiler/com.sun.tools.javac.main=zircon.javac"
+//                << "--add-exports=jdk.compiler/com.sun.tools.javac.parser=zircon.javac"
+//                << "--add-exports=jdk.compiler/com.sun.tools.javac.util=zircon.javac"
+        options.fork=true
+        options.forkOptions.jvmArgs
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+
     }
 }
 
 dependencies {
     implementation 'junit:junit:4.12'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-        annotationProcessor project(":javac")
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    annotationProcessor project(":javac")
+//    implementation "com.by122006.zircon:javac:0.2"
 }
